# gw-catalog

./: pyproject.toml
configs/: dev_small.yaml
docs/: mvp_plan.md
lensgraph/: __init__.py
lensgraph/data/: __init__.py  catalog_simulator.py  lens_models.py
scripts/: 01_generate_catalog.py
tests/: test_catalog.py
