[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lensgraph-gw-catalog"
version = "0.1.0"
description = "MVP LensGraph GW catalog pipeline scaffold"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "h5py>=3.10",
  "pyyaml>=6.0",
  "pytest>=8.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
